# cmdline

./: .clang-format  CMakeLists.txt  LICENSE  README.md  cmdline.h  cmdline_files.h  example.cc
.github/workflows/: ci.yml
internal/: cmdline_check.h  cmdline_error.h  cmdline_faces.h  cmdline_match.h  cmdline_model.h  cmdline_parse.h  cmdline_print.h  cmdline_rules.h  cmdline_typed.h  cmdline_types.h  cmdline_utils.h
tests/: cmdline_parser_test.cc  cmdline_test.cc  cmdline_test_helpers.h  expect_compile_fail.cmake
tests/compile_fail/: int_invalid_default.cc  uint_invalid_default.cc
